# pluse_mail

./: .gitignore  docker-compose.yml
backend/: Cargo.toml
backend/databases/: postgress.rs
backend/src/: databases.rs  main.rs
backend/src/databases/: chroma.rs  config.rs  postgress.rs
backend/src/handlers/: mod.rs  testing.rs
frontend/: .env.local.example  README.md  example.env.local.txt  new.tsx  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/inbox/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/app/: app-shell.tsx  ask-about-email.tsx  category-tabs.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/chat/: ChatBubble.tsx
frontend/src/constants/: categories.ts  config.ts  routes.ts
frontend/src/hooks/: index.ts  useAnalytics.ts  useAuth.ts  useChat.ts  useEmails.ts  useSyncStatus.ts
frontend/src/lib/: auth-options.ts  format.ts  gmail.ts  mock-analytics.ts  mock-emails.ts
frontend/src/lib/mock/: auth.ts  (+2 more)
frontend/src/providers/: QueryProvider.tsx
frontend/src/services/: analytics.ts  auth.ts  chat.ts  emails.ts  index.ts
frontend/src/store/: auth-store.ts  email-store.ts  ui-store.ts
frontend/src/types/: chat.ts  email.ts  index.ts  user.ts
k8s/: chroma.yaml  postgres.yaml
(+27 files in other folders)
