[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = "0.8.9"
chroma = "0.15.0"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.52.4", features = ["full"] }
url = "2.5.8"
